# python-template

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup_credentials.ps1
.github/: dependabot.yml
.github/workflows/: test.yml
src/: main.py
tests/: test_example.py
